Tarea02 terminada, pagina web con 8 "paginas" y utilizacion de todo lo aprendido en semanas 1, 2 y 3

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,16 +9,17 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <header class="header"> <!-- Etiqueta para ofrecerle al browser info de que es un encabezado-->       
+        <header class="encabezado"> <!-- Etiqueta para ofrecerle al browser info de que es un encabezado-->       
             <nav class="nav"> <!-- Etiqueta para ilustrarle al browser que posiblemente es una menú-->
-                <a href="index.html" class="logo nav-link">Reptile World</a>
-                <div class="nav-menu">
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="cocodrilos.html">Cocodrilos</a></div>
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="lagartos.html">Lagartos</a></div>
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="serpientes.html">Serpientes</a></div>                
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="tuataras.html">Tuataras</a></div>                
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="tortugas.html">Tortugas</a></div>                
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="informacion.html">Información</a></div>                
+                <a href="index.html" class="home nav-link">Reptile World</a>
+                <div class="menu">
+                    <div class="menu-item"><a class="menu-link " href="cocodrilos.html">Cocodrilos</a></div>
+                    <div class="menu-item"><a class="menu-link " href="lagartos.html">Lagartos</a></div>
+                    <div class="menu-item"><a class="menu-link " href="serpientes.html">Serpientes</a></div>                
+                    <div class="menu-item"><a class="menu-link " href="tuataras.html">Tuataras</a></div>                
+                    <div class="menu-item"><a class="menu-link " href="tortugas.html">Tortugas</a></div>                
+                    <div class="menu-item"><a class="menu-link " href="informacion.html">Información</a></div>   
+                    <div class="menu-item"><a class="menu-link " href="videos.html">Videos</a></div>     
                 </div>                             
             </nav>
         </header>        
