--- a/src/main/resources/static/informacion.html
+++ b/src/main/resources/static/informacion.html
@@ -2,99 +2,47 @@
 
 <html lang="es">
     <head>
-        <title>Reptile World</title>
+        <title>Información general</title>
         <meta charset="UTF-8">
         <meta name="description" content="Está pagina contiene ettiquetas del tipo html">
         <meta name="keywords" content="html5, css3, web">
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <header class="header"> <!-- Etiqueta para ofrecerle al browser info de que es un encabezado-->       
+        <header class="encabezado"> <!-- Etiqueta para ofrecerle al browser info de que es un encabezado-->       
             <nav class="nav"> <!-- Etiqueta para ilustrarle al browser que posiblemente es una menú-->
-                <a href="index.html" class="logo nav-link">Reptile World</a>
-                <div class="nav-menu">
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="ejemplo9.html">&LeftTriangleBar;</a></div>
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="ejemplo2.html">&RightTriangleBar;</a></div>
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="audios.html">Audios</a></div>                
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="videos.html">Videos</a></div>                
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="iframes.html">Iframe</a></div>                
-                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="formulario.html">Formulario</a></div>                
+                <a href="index.html" class="home nav-link">Reptile World</a>
+                <div class="menu">
+                    <div class="menu-item"><a class="menu-link link" href="cocodrilos.html">Cocodrilos</a></div>
+                    <div class="menu-item"><a class="menu-link link" href="lagartos.html">Lagartos</a></div>
+                    <div class="menu-item"><a class="menu-link link" href="serpientes.html">Serpientes</a></div>                
+                    <div class="menu-item"><a class="menu-link link" href="tuataras.html">Tuataras</a></div>                
+                    <div class="menu-item"><a class="menu-link link" href="tortugas.html">Tortugas</a></div>                
+                    <div class="menu-item"><a class="menu-link link" href="informacion.html">Información</a></div>   
+                    <div class="menu-item"><a class="menu-link link" href="videos.html">Videos</a></div>     
                 </div>                             
             </nav>
-        </header>
-        <aside id="barralateral"> <!-- Etiqueta para indicar que es una barra lateral final -->
-            <h2>Productos más vendidos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit cubilia faucibus vel sem, tincidunt nibh dui aptent turpis eu lobortis tristique facilisis. Et cursus magna purus leo turpis augue sodales facilisi faucibus, felis metus arcu aptent egestas dictumst hendrerit quam sociosqu, odio viverra dis luctus penatibus libero mollis integer. Eros hendrerit gravida conubia consequat eleifend est felis, integer feugiat quis montes dignissim donec blandit ut, neque viverra magnis placerat nunc eget.</p>
-        </aside>
-        <section id="contenido">
-            <h2>Articulos principales</h2>
-            <article>
-                <header>Portatil XRT 5000</header>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, erat volutpat dignissim orci ornare ridiculus fames. Varius enim fermentum augue sed taciti, in parturient semper risus, sodales molestie aliquet conubia. Nisi et congue augue ante primis curae feugiat, est nunc condimentum lacus metus mauris magna donec, netus per interdum libero commodo nibh. Justo interdum praesent leo pellentesque posuere congue cursus egestas fusce urna orci placerat class velit, nunc risus imperdiet litora et dis scelerisque porta tempor iaculis nec parturient torquent.</p>      
-                <footer>Agregar al carrito</footer>
-                <figure>
-                    <img src='images/asus.jpg' alt='Portatil' style='height: 504px; width: 350px;'/>
-                    <figcaption>Más vendido</figcaption>
-                </figure>
-            </article>
-            <article>
-                <header>Alienware ATD 9000</header>
-                <p>Está inspirada en la pelicula <cite>Aliens el octavo pasajero</cite>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, erat volutpat dignissim orci ornare ridiculus fames. Varius enim fermentum augue sed taciti, in parturient semper risus, sodales molestie aliquet conubia. Nisi et congue augue ante primis curae feugiat, est nunc condimentum lacus metus mauris magna donec, netus per interdum libero commodo nibh. Justo interdum praesent leo pellentesque posuere congue cursus egestas fusce urna orci placerat class velit, nunc risus imperdiet litora et dis scelerisque porta tempor iaculis nec parturient torquent.</p>      
-                <footer>Agregar al carrito</footer>   
-                <figure>
-                    <img src='images/alienware.jpg' alt='Alienware'/>
-                    <figcaption>Más vendido</figcaption>
-                </figure>
-            </article>
-            <article>
-                <header>Impresora 3D portable</header>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, erat volutpat dignissim orci ornare ridiculus fames. Varius enim fermentum augue sed taciti, in parturient semper risus, sodales molestie aliquet conubia. Nisi et congue augue ante primis curae feugiat, est nunc condimentum lacus metus mauris magna donec, netus per interdum libero commodo nibh. Justo interdum praesent leo pellentesque posuere congue cursus egestas fusce urna orci placerat class velit, nunc risus imperdiet litora et dis scelerisque porta tempor iaculis nec parturient torquent.</p>      
-                <footer>Agregar al carrito</footer>    
-                <figure>
-                    <img src='images/impresora3d.jpg' alt='imp3d' />
-                    <figcaption>Más vendido</figcaption>
-                </figure>
-            </article>    
-            <article>
-                <header>Resumen de lineas generales</header>
-                <p>erat volutpat dignissim orci ornare ridiculus fames. Varius enim fermentum augue sed taciti, in parturient semper risus, sodales molestie aliquet conubia. Nisi et congue augue ante primis curae feugiat, est nunc condimentum lacus metus mauris magna donec, netus per interdum libero commodo nibh. Justo interdum praesent leo pellentesque posuere congue cursus egestas fusce urna orci placerat class velit, nunc risus imperdiet litora et dis scelerisque porta tempor iaculis nec parturient torquent.</p>      
-                <table border="0">
-                    <thead>
-                        <tr id="encabezadoTabla">
-                            <th>Codigo</th>
-                            <th>Detalle</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tablaResumen">
-                        <tr>
-                            <td>1</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, </td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, </td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, </td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, </td>
-                        </tr>
-                    </tbody>
-                </table>
-
-            </article> 
-        </section>
-        <footer id="piedepagina">Derechos reservados &COPY; 2022 <address style="display: inline;">Tel 8889-7744</address></footer>
+        </header>        
+        <div>
+            <div>                          
+                <h1>Los reptiles y sus caracteristicas</h1>
+                <iframe width="1110" height="624" src="https://www.youtube.com/embed/UQrVdZ1Co_E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div>                          
+                <h2>Información sobre primeros auxilios en reptiles:</h2>
+                <a href="https://endanea.com/consejos-mascotas/primeros-auxilios-reptiles/" target="_blank">Primeros auxilios</a>      
+            </div>
+            <div>
+                <h2>La Fundación Internacional para la Conservación de Los Reptiles (IRCF)</h2>
+                <a href="https://ircf.org/" target="_blank">IRCF</a>  
+                <p>El objetivo primordial de la IRCF es apoyar los programas de conservación e investigación que contribuyan con la supervivencia de las especies de reptiles y anfibios que se hayan amenazadas al igual que sus hábitats. La IRCF trabaja conjuntamente con la comunidad científica, con educadores, con patrocinadores corporativos e individuales y con organizaciones conservacionistas como parte una solución global.</p>
+                <p>La IRFC es una organización que busca, de manera activa, la conservación de los reptiles y anfibios, de sus hábitats y de los ecosistemas que los mantienen en una gran variedad de capacidades dependiendo del proyecto o programa. El apoyo de la IRFC se basa en la recaudación de fondos, adquisición de tierras, apoyo logístico, comunicación y fomento del sentido de la conservación de las especies, publicaciones y coordinación voluntaria.</p>
+            </div>
+            <div>
+                <h2>Más informacion sobre la vida silvestre en costa rica:</h2>
+                <a href="https://www.sinac.go.cr/ES/VISASILVES/Paginas/default.aspx" target="_blank">Sistema nacional de áreas de conservación Costa Rica</a>                 
+            </div>
+        </div>
+        <footer>Derechos reservados &COPY; 2022</footer>
     </body>
 </html>
