--- a/src/main/resources/static/lagartos.html
+++ b/src/main/resources/static/lagartos.html
@@ -2,7 +2,7 @@
 
 <html lang="es">
     <head>
-        <title>Los tuátaras</title>
+        <title>Los lagartos</title>
         <meta charset="UTF-8">
         <meta name="description" content="Está pagina contiene ettiquetas del tipo html">
         <meta name="keywords" content="html5, css3, web">
@@ -22,27 +22,29 @@
                     <div class="menu-item"><a class="menu-link link" href="videos.html">Videos</a></div>     
                 </div>                             
             </nav>
-        </header>        
+        </header>       
         <div>
             <div>                          
-                <h1>¿Que son los tuátaras?</h1>
-                <p>Los tuátaras o esfenodontes (género Sphenodon) son reptiles endémicos de las islas aledañas a Nueva Zelanda, constituyen al único género del orden Sphenodontia que ha sobrevivido hasta la actualidad, prácticamente sin cambios desde la Era Mesozoica.</p>                             
-                <p>El significado de su nombre común proviene del maorí y quiere decir "espalda espinosa", para ellos el tuátara es considerado un taonga (tesoro especial). A primera vista (por convergencia evolutiva) son parecidas a las iguanas, con las que, sin embargo, no están cercanamente emparentadas.</p>
+                <h1>¿Que son los lagartos?</h1>
+                <p>Los lagartos habitan en todo nuestro planeta, a excepción de la Antártida, las características del lagarto hacen que sea un animal muy singular, algunas especies carecen de extremidades, aunque pueden ser diferenciadas de las serpientes por la presencia de párpados y oídos externos. En la naturaleza, encontramos muchos lagartos que utilizan su lengua para “oler” y reconocer el entorno, por eso los podemos ver extrayendo su lengua constantemente.</p>                             
+                <p>En cuanto a su tamaño, los geckos son los lagartos más pequeños del planeta con unos cuantos centímetros de longitud, mientras que el dragón de Komodo es tan imponente que puede llegar a medir hasta 3 metros de largo. Esto nos da una idea de la gran variedad que existe dentro de este género. Mientras algunas especies son capaces de escupir sangre por sus ojos como medio de protección.</p>
             </div>
             <div>                          
-                <h1>Características de los tuátaras</h1>
+                <h1>Características de los lagartos</h1>
                 <figure>
-                    <img src="fotos/tuatara.jpg" alt="tuatara" style="height: 200px; width: 400;"/>            
+                    <img src="fotos/lagarto.jpg" alt="lagarto" style="height: 200px; width: 400;"/>            
                 </figure>
+                <p>En general, los lagartos se caracterizan por lo siguiente:</p>
                 <ul>
-                    <li>El tuátara es capaz de capturar presas en situaciones  de muy baja luminosidad.</li>
-                    <li>Gran sentido del olfato.</li>
-                    <li>El tuátara tiene la temperatura corporal óptima más baja en comparación con cualquier otro reptil, oscila entre los16 y 21ºC.</li>
+                    <li>Una cola larga que se puede desprender para escapar de depredadores.</li>
+                    <li>Un cuello corto.</li>
+                    <li>Cuatro extremidades.</li>
+                    <li>Comen insectos.</li>
                 </ul>     
             </div>
             <div>
-                <h1>Informacion sobre los tuátaras y su historia:</h1>
-                <iframe width="1110" height="624" src="https://www.youtube.com/embed/k1yGIWo1eKs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h1>Datos interesantes sobre los lagartos!</h1>
+                <iframe width="1110" height="624" src="https://www.youtube.com/embed/JtTxpWJxysw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <footer>Derechos reservados &COPY; 2022</footer>
